@@ -568,6 +568,7 @@ All:
 - Fix build with wxUSE_FFILE==0 (jroemmler).
 - Add wxDEPRECATED_MSG() and use it in a few places.
 - Return the old file descriptor/pointer from wx(F)File::Detach() (troelsk).
+- _() and wxGetTranslation() are now thread-safe.
 
 All (GUI):
 
